--- a/.github/workflows/tests-two.yaml
+++ b/.github/workflows/tests-two.yaml
@@ -5,6 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
-        run: echo "GET CODE"
-      - name: Download dependencies
-        run: echo "Download dependencies"
+        uses: actions/checkout@v4
+
+      - name: Install Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+
+      - name: Install Dependencies
+        run:  maven-build
