--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -15,5 +15,20 @@ jobs:
 
       - name: Install Dependencies
         run:  mvn clean
+
       - name: Run Tests
         run: mvn test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v4
+
+      - name: Install Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+
+      - name: Deployment
+        run: echo "Deployment successful"
