--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -19,6 +19,8 @@ jobs:
       - name: Run Tests
         run: mvn test
   deploy:
+    needs:
+      - steps
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -30,5 +32,8 @@ jobs:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
 
+      - name: Install Dependencies
+        run: mvn clean
+
       - name: Deployment
-        run: echo "Deployment successful"
+        run: echo "Deploying..."
