--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -20,7 +20,7 @@ jobs:
         run: mvn test
   deploy:
     needs:
-      - steps
+      - test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
