--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -18,9 +18,22 @@ jobs:
 
       - name: Run Tests
         run: mvn test
-  deploy:
+  sonarqube:
     needs:
       - test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+            - name: SonarQube Scan
+              uses: sonarsource/sonarqube-scan-action@master
+
+  deploy:
+    needs:
+      - sonarqube
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
