--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -18,21 +18,21 @@ jobs:
 
       - name: Run Tests
         run: mvn test
-  sonarqube:
-    needs:
-      - test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get Code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      -  name: SonarQube Scan
-         uses: sonarsource/sonarqube-scan-action@master
+#  sonarqube:
+#    needs:
+#      - test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Get Code
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#      -  name: SonarQube Scan
+#         uses: sonarsource/sonarqube-scan-action@master
 
   deploy:
     needs:
-      - sonarqube
+      - test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
