--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -1,12 +1,5 @@
 name: Github actions second workflow
-on:
-  pull_request:
-    types:
-      - opened
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+on: [push, workflow_dispatch]
 jobs:
   test:
     runs-on: ubuntu-latest
